--- a/views/docs.html
+++ b/views/docs.html
@@ -21,7 +21,7 @@
         <div class="sidebar-brand-icon">
         	<img src="img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">Fxc7 API</div>
+        <div class="sidebar-brand-text mx-3">Iqbal API</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
