--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html><head>
-<title> [+] FarhanXCode7 - Rest APIs [+]  </title>
+<title> [+] Iqbal - Rest APIs [+]  </title>
 <meta charset="UTF-8"> 
 <meta name="robots" content="all"> 
 <meta name="robots schedule" content="auto"> 
 <meta name="distribution" content="global"> 
 <meta name="googlebot" content="index,follow">
-<meta property="og:title" content=".:: FarhanXCode7 ::."/>  
+<meta property="og:title" content=".:: Iqbal ::."/>  
 <meta name="description" content=" [+] I am Surrender [+] "> 
 <meta property="og:image" content="https://i.ibb.co/1LCyWRW/Creepypasta.jpg">
 <link rel="shortcut icon" href="https://i.ibb.co/1LCyWRW/Creepypasta.jpg" />  
@@ -72,35 +72,35 @@ background-size: cover;
 width: 100%; height: 100%; }
 .blink {
 font-family: 'New Rocker',cursive;
--webkit-animation-name: farhan;
+-webkit-animation-name: iqbal;
 -webkit-animation-duration: 2s;
 -webkit-animation-timing-function: linear;
 -webkit-animation-iteration-count: infinite;
 
--moz-animation-name: farhan;
+-moz-animation-name: iqbal;
 -moz-animation-duration: 1s;
 -moz-animation-timing-function: linear;
 -moz-animation-iteration-count: infinite;
 
- animation-name: farhan;
+ animation-name: iqbal;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
 }
 
-@-moz-keyframes farhan {  
+@-moz-keyframes iqbal {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
  }
 
-@-webkit-keyframes farhan {  
+@-webkit-keyframes iqbal {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
  }
 
-@keyframes farhan {  
+@keyframes iqbal {  
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
@@ -147,10 +147,10 @@ font-family: 'New Rocker',cursive;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
- animation: FXC7 5s linear infinite;
+ animation: Iqbalz 5s linear infinite;
  }
  
- @keyframes FXC7 {
+ @keyframes Iqbalz {
  0% {
  background-position-x: -500%;
  }
@@ -178,7 +178,7 @@ font-family: 'New Rocker',cursive;
 <div class="blink">
 <div id="back"><font size="20">
 <b>
-  <span class="one">[+] REST</span><span class="two"> APIs FXC7 [+]</span>
+  <span class="one">[+] REST</span><span class="two"> APIs Iqbalz [+]</span>
   </b>
 </font>
 </div>
