--- a/views/docs.html
+++ b/views/docs.html
@@ -462,7 +462,7 @@
   <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; 2021 - Developed By
-              <b>Fxc7</b>
+              <b>Iqbal</b>
             </span>
           </div>
         </div>
