--- a/views/docs.html
+++ b/views/docs.html
@@ -446,10 +446,10 @@
              <div class="card m-3 text-center shadow">
                <p class="card-header shadow-sm bg-primary text-white text-uppercase">About Me</p>
               <div class="text-center">
-        <img src="https://tinyurl.com/ez4xvzsw" class="rounded-circle shadow mb-3" alt="Fxc7" width="150px" height="150px">
+        <img src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/logo3.png" class="rounded-circle shadow mb-3" alt="Fxc7" width="150px" height="150px">
       </div>
       <div class="copyright text-center my-auto">
-     <p class="card-text text-shadow">Farhan, 17 tahun<br></p><div class="text-xs font-weight-bold text-uppercase">
+     <p class="card-text text-shadow">Iqbal, 17 tahun<br></p><div class="text-xs font-weight-bold text-uppercase">
        <h6 class="text-uppercase">Thanks To:</h6><br>
        Manurios<br>Wawan<br>Rakha<br>Fxc7 Team
      </div>
