--- a/views/docs.html
+++ b/views/docs.html
@@ -337,7 +337,7 @@
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="https://tinyurl.com/ez4xvzsw" style="max-width: 60px">
+                <img class="img-profile rounded-circle" src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/logo3.png" style="max-width: 60px">
                 <span class="ml-2 d-none d-lg-inline text-white small">Fxc7</span>
               </a>
               </div>
