--- a/views/docs.html
+++ b/views/docs.html
@@ -358,7 +358,7 @@
         <div class="card-header py-3">
          <div class="card-body">
            <div class="row align-item-center">
-              <img class="shadow mb-4" width="330px" height="300px" src="https://tinyurl.com/fhszp24">
+              <img class="shadow mb-4" width="330px" height="300px" src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/wow.png">
                    </div>
                   </div>
                 </div>
