--- a/views/docs.html
+++ b/views/docs.html
@@ -278,25 +278,25 @@
 <div class="version"><b>Contact me</b></div>
       </div>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://wa.me/628311800241">
+            <a class="nav-link collapsed" href="https://wa.me/6281316438103">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/Fxc7">
+            <a class="nav-link collapsed" href="https://github.com/gk ada">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/only_fxc7">
+            <a class="nav-link collapsed" href="https://instagram.com/gk punya">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Fxc7</b></div>
+      <div class="version"><b>Made With ♥️ By Iqbalz</b></div>
     </ul>
     <!-- Sidebar -->
       <div id="content-wrapper" class="d-flex flex-column">
@@ -346,7 +346,7 @@
         <!-- Container Fluid-->
         <div class="container-fluid" id="container-wrapper">
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-             <h1 class="text-xs font-weight-bold text-uppercase text-center mb-1">rest APIs - FXC7</h1>
+             <h1 class="text-xs font-weight-bold text-uppercase text-center mb-1">rest APIs - Iqbalz</h1>
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="/">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">Beranda</li>
@@ -358,7 +358,7 @@
         <div class="card-header py-3">
          <div class="card-body">
            <div class="row align-item-center">
-              <img class="shadow mb-4" width="330px" height="300px" src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/wow.png">
+              <img class="shadow mb-4" width="60px" height="60px" src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/wow.png">
                    </div>
                   </div>
                 </div>
