--- a/views/docs.html
+++ b/views/docs.html
@@ -51,9 +51,9 @@
             <a class="collapse-item" href="/api/yt/playmp4?query=Monolog-pamungkas&apikey=APIKEY">Youtube Play Mp4</a>
             <a class="collapse-item" href="/api/yt/search?query=Monolog-pamungkas&apikey=APIKEY">Youtube Searching</a>
             <h6 class="collapse-header">Stalker Features</h6>
-            <a class="collapse-item" href="/api/stalk/ig?apikey=APIKEY&username=only_fxc7">Instagram Stalker</a>
-            <a class="collapse-item" href="/api/stalk/tiktok?apikey=APIKEY&username=chikakiku">Tiktok Stalker</a>
-            <a class="collapse-item" href="/api/stalk/npm?apikey=APIKEY&query=zhirrr-api&hostname=zhirrr">Info NPM</a>
+            <a class="collapse-item" href="/api/stalk/ig?apikey=APIKEY&username=Iqbalz">Instagram Stalker</a>
+            <a class="collapse-item" href="/api/stalk/tiktok?apikey=APIKEY&username=Iqbalz">Tiktok Stalker</a>
+            <a class="collapse-item" href="/api/stalk/npm?apikey=APIKEY&query=Iqbalz-api&hostname=Iqbalz">Info NPM</a>
             </div>
         </div>
       </li>
@@ -127,12 +127,12 @@
         <div id="collapseMaker" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="/api/maker/nulis?apikey=APIKEY&text=Awokwokwok Mager yaa:v">Nulis Buku</a>
-            <a class="collapse-item" href="/api/maker/attp?apikey=APIKEY&text=Fxc7">Animation Text To Picture</a>
-            <a class="collapse-item" href="/api/maker/ttp?apikey=APIKEY&text=Farhan">Text To Picture</a>
+            <a class="collapse-item" href="/api/maker/attp?apikey=APIKEY&text=Iqbalz">Animation Text To Picture</a>
+            <a class="collapse-item" href="/api/maker/ttp?apikey=APIKEY&text=Iqbalz">Text To Picture</a>
             <a class="collapse-item" href="/api/maker/emoji2png?apikey=APIKEY&text=😂">Emoji To Png</a>
             <hr>
             <a class="collapse-item" href="/api/maker/skatch?apikey=APIKEY&url=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbmrYfgiRt1lLwNgRMgMbID62qH3EQ2T1c6RUJEQMcoCWKqVVxAg7R_LfM&s=10">Skatch Effect</a>
-            <a class="collapse-item" href="/api/maker/harta-tahta?apikey=APIKEY&text=Farhan">Harta Tahta Maker</a>
+            <a class="collapse-item" href="/api/maker/harta-tahta?apikey=APIKEY&text=Iqbalz">Harta Tahta Maker</a>
             </div>
             </div>
             </li>
@@ -145,10 +145,10 @@
         <div id="collapsePhotooxy" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Photooxy API</h6>
-            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Farhan">Shadow Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Farhan">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Iqbalz">Shadow Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Iqbalz">Romantic Text Effect</a>
             <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Farhan">Smoke text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Farhan">Burn-paper Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Iqbalz">Burn-paper Text Effect</a>
             <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Farhan">Naruto Text Effect</a>
             <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Farhan">Romantic Text Effect</a>
             <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Farhan">Love-Message Text Effect</a>
