--- a/views/docs.html
+++ b/views/docs.html
@@ -147,17 +147,17 @@
             <h6 class="collapse-header">Photooxy API</h6>
             <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Iqbalz">Shadow Text Effect</a>
             <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Iqbalz">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Farhan">Smoke text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Iqbalz">Smoke text Effect</a>
             <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Iqbalz">Burn-paper Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Farhan">Naruto Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Farhan">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Farhan">Love-Message Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Farhan">Message Under Grass</a>
-            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Farhan&text2=Rest APIs">Glitch Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Farhan">Double Heart</a>
-            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Farhan">Coffe-cup Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Farhan">Love-Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Farhan">Butterfly Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Iqbalz">Naruto Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Iqbalz">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Iqbalz">Love-Message Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Iqbalz">Message Under Grass</a>
+            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Iqbalz&text2=Rest APIs">Glitch Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Iqbalz">Double Heart</a>
+            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Iqbalz">Coffe-cup Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Iqbalz">Love-Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Iqbalz">Butterfly Text Effect</a>
           </div>
         </div>
       </li>
@@ -170,7 +170,7 @@
         <div id="collapseTextpro" class="collapse" aria-labelledby="headingAnime" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Textpro Me Features</h6>
-            <a class="collapse-item" href="/api/textpro/natural-leaves?apikey=APIKEY&text=Farhan">Natural Leaves Text Images</a>
+            <a class="collapse-item" href="/api/textpro/natural-leaves?apikey=APIKEY&text=Iqbalz">Natural Leaves Text Images</a>
             <a class="collapse-item" href="/api/textpro/black-pink?apikey=APIKEY&text=Farhan">Black Pink Text Image</a>
             <a class="collapse-item" href="/api/textpro/drop-water?apikey=APIKEY&text=Farhan">Drop Water Text Image</a>
             <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Farhan&text2=Fxc7">Logo Wolf Text Image</a>
