--- a/views/docs.html
+++ b/views/docs.html
@@ -126,7 +126,7 @@
         </a>
         <div id="collapseMaker" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="/api/maker/nulis?apikey=APIKEY&text=Awokwokwok Mager yaa:v">Nulis Buku</a>
+            <a class="collapse-item" href="/api/maker/nulis?apikey=APIKEY&text=Iqbal Ganteng:v">Nulis Buku</a>
             <a class="collapse-item" href="/api/maker/attp?apikey=APIKEY&text=Iqbalz">Animation Text To Picture</a>
             <a class="collapse-item" href="/api/maker/ttp?apikey=APIKEY&text=Iqbalz">Text To Picture</a>
             <a class="collapse-item" href="/api/maker/emoji2png?apikey=APIKEY&text=😂">Emoji To Png</a>
@@ -171,16 +171,16 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Textpro Me Features</h6>
             <a class="collapse-item" href="/api/textpro/natural-leaves?apikey=APIKEY&text=Iqbalz">Natural Leaves Text Images</a>
-            <a class="collapse-item" href="/api/textpro/black-pink?apikey=APIKEY&text=Farhan">Black Pink Text Image</a>
-            <a class="collapse-item" href="/api/textpro/drop-water?apikey=APIKEY&text=Farhan">Drop Water Text Image</a>
-            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Farhan&text2=Fxc7">Logo Wolf Text Image</a>
-            <a class="collapse-item" href="/api/textpro/logo-wolf2?apikey=APIKEY&text=Farhan&text2=Fxc7">Logo Wolf 2 Text Image</a>
-            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Farhan">Thunder Text Image</a>
-            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Farhan">Firework Sparkle Text Image</a>
-            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Farhan">Matrix Text Image</a>
-            <a class="collapse-item" href="/api/textpro/christmas?apikey=APIKEY&text=Farhan">Christmas Text Image</a>
-            <a class="collapse-item" href="/api/textpro/3d-gradient?apikey=APIKEY&text=Farhan">3D Gradient Text Image</a>
-            <a class="collapse-item" href="/api/textpro/porn-hub?apikey=APIKEY&text1=Farhan&text2=Gans">Porn Hub Text Image</a>
+            <a class="collapse-item" href="/api/textpro/black-pink?apikey=APIKEY&text=Iqbalz">Black Pink Text Image</a>
+            <a class="collapse-item" href="/api/textpro/drop-water?apikey=APIKEY&text=Iqbalz">Drop Water Text Image</a>
+            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Iqbalz&text2=Gans">Logo Wolf Text Image</a>
+            <a class="collapse-item" href="/api/textpro/logo-wolf2?apikey=APIKEY&text=Iqbalz&text2=Gans">Logo Wolf 2 Text Image</a>
+            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Iqbalz">Thunder Text Image</a>
+            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Iqbalz">Firework Sparkle Text Image</a>
+            <a class="collapse-item" href="/api/textpro/logo-wolf?apikey=APIKEY&text=Iqbalz">Matrix Text Image</a>
+            <a class="collapse-item" href="/api/textpro/christmas?apikey=APIKEY&text=Iqbalz">Christmas Text Image</a>
+            <a class="collapse-item" href="/api/textpro/3d-gradient?apikey=APIKEY&text=Iqbalz">3D Gradient Text Image</a>
+            <a class="collapse-item" href="/api/textpro/porn-hub?apikey=APIKEY&text1=Iqbalz&text2=Gans">Porn Hub Text Image</a>
           </div>
         </div>
       </li>
@@ -245,11 +245,11 @@
             <a class="collapse-item" href="/api/translate?kata=hi&apikey=APIKEY">Translate</a>
             <a class="collapse-item" href="/api/fakedata?country=en&apikey=APIKEY">Fake Data</a>
          <h6 class="collapse-header">Encrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=Fxc7Apis">Base64 Encrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=Fxc7Apis">Base32 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=Iqbalzpis">Base64 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=IqbalzApis">Base32 Encrypt</a>
          <h6 class="collapse-header">Decrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=Fxc7Apis">Base64 Decrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=Fxc7Apis">Base32 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=IqbalzApis">Base64 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=IqbalzApis">Base32 Decrypt</a>
          </div>
          </div>
         </li>
@@ -449,9 +449,9 @@
         <img src="https://raw.githubusercontent.com/ggghggggh/api-denz-xyz/master/public/img/logo/logo3.png" class="rounded-circle shadow mb-3" alt="Fxc7" width="150px" height="150px">
       </div>
       <div class="copyright text-center my-auto">
-     <p class="card-text text-shadow">Iqbal, 17 tahun<br></p><div class="text-xs font-weight-bold text-uppercase">
+     <p class="card-text text-shadow">Iqbal, 14 tahun<br></p><div class="text-xs font-weight-bold text-uppercase">
        <h6 class="text-uppercase">Thanks To:</h6><br>
-       Manurios<br>Wawan<br>Rakha<br>Fxc7 Team
+       Iqbalz
      </div>
      </div>
       </div>
