--- a/views/index.html
+++ b/views/index.html
@@ -178,13 +178,13 @@ font-family: 'New Rocker',cursive;
 <div class="blink">
 <div id="back"><font size="20">
 <b>
-  <span class="one">[+] REST</span><span class="two"> APIs Iqbalz [+]</span>
+  <span class="one"> > REST</span><span class="two"> APIs Iqbalz < </span>
   </b>
 </font>
 </div>
 </div>
 <br>
-<a id="one" href="/docs">Documentasi</a>
+<a id="one" href="/docs">Docs</a>
 <script type="text/javascript">
 Sayings = "";
 			var now = new Date();
