--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,8 @@
 <meta name="googlebot" content="index,follow">
 <meta property="og:title" content=".:: Iqbal ::."/>  
 <meta name="description" content=" [+] I am Surrender [+] "> 
-<meta property="og:image" content="https://i.ibb.co/1LCyWRW/Creepypasta.jpg">
-<link rel="shortcut icon" href="https://i.ibb.co/1LCyWRW/Creepypasta.jpg" />  
+<meta property="og:image" content="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg">
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" />  
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script><br><br><br>
 <table height="100%" width="100%">
