--- a/views/index.html
+++ b/views/index.html
@@ -175,8 +175,9 @@ font-family: 'New Rocker',cursive;
 </style>
 <center>
 <img class="image" src="https://i.pinimg.com/originals/0b/5f/c3/0b5fc3d7b668d2c9b61bf92d5a8dc8e6.gif" height="600" width="980"><br>
-<div class="blink">
-<div id="back"><font size="20">
+<div class="sp-container">
+<div class="sp-container">
+<div class="sp-globe"></div>
 <b>
   <span class="one"> > REST</span><span class="two"> APIs Iqbalz < </span>
   </b>
