--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 	<html>
 
 <head>
-<title> Iqbalz - Api </title> 
-<meta property="og:image" content="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" /> 
-<meta property="og:title" content="Iqbalz" /> <meta property="og:description" content="SadBoy"/> 
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" type="image/x-icon" />
+<title> Animoneesan - Api </title> 
+<meta property="og:image" content="https://tinyurl.com/Animoneesanbg" /> 
+<meta property="og:title" content="Animoneesan" /> <meta property="og:description" content="Ara-ara"/> 
+<link rel="shortcut icon" href="https://tinyurl.com/Animoicons" type="image/x-icon" />
 </head>
 <body>
 
@@ -23,18 +23,18 @@
       <h2 class="frame-3">Di Website</h2>
       <h2 class="frame-4">Rest Api</h2>
       <h2 class="frame-5">
-        <span>Iqbalz</span>
+        <span>Animoneesan</span>
         <span>Rest</span>
         <span>API's</span>
       </h2>
-      <a class="sp-circle-link" href="/docs">Open</a>
+      <a class="sp-circle-link" href="/docs">Buka</a>
     </div>
   </div>
 
   <style>
     @import url('https://fonts.googleapis.com/css?family=Barlow');
     body {
-      background: #310404 url(https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg) no-repeat center center fixed;
+      background: #310404 url(https://tinyurl.com/Animoneesanbg) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
