--- a/views/docs.html
+++ b/views/docs.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 
-<title> Iqbalz Api </title> 
-<meta property="og:image" content="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" /> 
-<meta property="og:title" content="Iqbalz APIs" /> <meta property="og:description" content="Ampun stah masih pemula"/> 
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" type="image/x-icon" />
+<title> Animoneesan Api </title> 
+<meta property="og:image" content="https://tinyurl.com/Animoneesanbg" /> 
+<meta property="og:title" content="Animoneesan APIs" /> <meta property="og:description" content="Ampun stah masih pemula"/> 
+<link rel="shortcut icon" href="https://tinyurl.com/Animoicons" type="image/x-icon" />
 
 </head>
 <body>
@@ -19,12 +19,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-    <title>Rest API - Iqbalz</title>
+    <title>Rest API - Animoneesan</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
   <link rel="stylesheet" href="ccs/fakeLoader.css">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg">
+  <link rel="shortcut icon" href="https://tinyurl.com/Animoicons">
   <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
@@ -240,9 +240,9 @@ button1:hover {
     <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
       <a class="sidebar-brand d-flex align-items-center justify-content-center bg-gradient-dark" href="index.html">
         <div class="sidebar-brand-icon">
-        	<img src="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg">
+        	<img src="https://tinyurl.com/Animoicons">
         </div>
-        <div class="sidebar-brand-text mx-3 whitet">Iqbalz APIs</div>
+        <div class="sidebar-brand-text mx-3 whitet">Animoneesan APIs</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
@@ -399,9 +399,9 @@ button1:hover {
         <div id="collapseMaker" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="/api/maker/nulis?apikey=APIKEY&text=Awokwokwok Mager yaa:v">Nulis Buku</a>
-            <a class="collapse-item" href="/api/maker/attp?apikey=APIKEY&text=Iqbalz">Animation Text To Picture</a>
-            <a class="collapse-item" href="/api/maker/ttp?apikey=APIKEY&text=Iqbalz">Text To Picture</a>
-            <a class="collapse-item" href="/api/maker/ttp2?apikey=APIKEY&text=Iqbalz">Text To Picture 2</a>
+            <a class="collapse-item" href="/api/maker/attp?apikey=APIKEY&text=Animoneesan">Animation Text To Picture</a>
+            <a class="collapse-item" href="/api/maker/ttp?apikey=APIKEY&text=Animoneesan">Text To Picture</a>
+            <a class="collapse-item" href="/api/maker/ttp2?apikey=APIKEY&text=Animoneesan">Text To Picture 2</a>
             <a class="collapse-item" href="/api/maker/emoji2png?apikey=APIKEY&text=😎">Emoji To Png</a>
             <h6 class="collapse-header">Image Edit API</h6>
             <a class="collapse-item" href="/api/maker/skatch?apikey=APIKEY&url=https://i.ibb.co/wJv5Pgp/logolu.png">Skatch Effect</a>
@@ -426,19 +426,19 @@ button1:hover {
         <div id="collapsePhotooxy" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Photooxy API</h6>
-            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Iqbalz">Shadow Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Iqbalz">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Iqbalz">Smoke text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Iqbalz">Burn-paper Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Iqbalz">Naruto Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Iqbalz">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Iqbalz">Love-Message Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Iqbalz">Message Under Grass</a>
-            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Iqbalz&text2=Rest APIs">Glitch Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Iqbalz">Double Heart</a>
-            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Iqbalz">Coffe-cup Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Iqbalz">Love-Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Iqbalz">Butterfly Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Animoneesan">Shadow Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Animoneesan">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Animoneesan">Smoke text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Animoneesan">Burn-paper Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Animoneesan">Naruto Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Animoneesan">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Animoneesan">Love-Message Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Animoneesan">Message Under Grass</a>
+            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Animoneesan&text2=Rest APIs">Glitch Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Animoneesan">Double Heart</a>
+            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Animoneesan">Coffe-cup Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Animoneesan">Love-Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Animoneesan">Butterfly Text Effect</a>
           </div>
         </div>
       </li>
@@ -521,11 +521,11 @@ button1:hover {
             <a class="collapse-item" href="/api/translate?kata=hi&apikey=APIKEY">Translate</a>
             <a class="collapse-item" href="/api/fakedata?country=en&apikey=APIKEY">Fake Data</a>
          <h6 class="collapse-header">Encrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=IqbalzApis">Base64 Encrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=IqbalzApis">Base32 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=AnimoneesanApis">Base64 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=AnimoneesanApis">Base32 Encrypt</a>
          <h6 class="collapse-header">Decrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=IqbalzApis">Base64 Decrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=IqbalzApis">Base32 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=AnimoneesanApis">Base64 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=AnimoneesanApis">Base32 Decrypt</a>
          </div>
          </div>
         </li>
@@ -554,14 +554,14 @@ button1:hover {
         My Project
       </div>
       <li class="nav-item">
-      <a class="nav-link collapsed" href="https://api.whatsapp.com/send?phone=6281315995628&text=#menu" data-toggle="" data-target="#project"
+      <a class="nav-link collapsed" href="https://api.whatsapp.com/send?phone=62895321216904&text=Bot" data-toggle="" data-target="#project"
           aria-expanded="true" aria-controls="project">
           <i class="fab fa-whatsapp"></i>
           <span>Bot WhatsApp</span>
         </a>
         </li>
         <li class="nav-item">
-      <a class="nav-link collapsed" href="https://wa.me/6281325304141?text=zcreateapikey" data-toggle="" data-target="#project"
+      <a class="nav-link collapsed" href="https://wa.me/6283877698966?text=Tambahinapikey" data-toggle="" data-target="#project"
           aria-expanded="true" aria-controls="project">
           <i class="fab fa-key"></i>
           <span>Create Apikey</span>
@@ -575,14 +575,14 @@ button1:hover {
         </a>
         </li>
      <li class="nav-item">
-      <a class="nav-link collapsed" href="https://github.com/Iqbalz" data-toggle="" data-target="#project"
+      <a class="nav-link collapsed" href="https://github.com/jauhari21" data-toggle="" data-target="#project"
           aria-expanded="true" aria-controls="project">
           <i class="fas fa-robot"></i>
           <span>Script Bot</span>
         </a>
         </li>
      <li class="nav-item">
-      <a class="nav-link collapsed" href="https://chat.whatsapp.com" data-toggle="" data-target="#project"
+      <a class="nav-link collapsed" href="https://chat.whatsapp.com/KSqwpVo4vqSHaRjTNDhtSo" data-toggle="" data-target="#project"
           aria-expanded="true" aria-controls="project">
           <i class="fas fa-link"></i>
           <span>Group Whatsapp</span>
@@ -656,8 +656,8 @@ button1:hover {
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg" style="max-width: 60px">
-                <span class="ml-2 d-none d-lg-inline text-white small">Iqbalz</span>
+                <img class="img-profile rounded-circle" src="https://tinyurl.com/Animoicons" style="max-width: 60px">
+                <span class="ml-2 d-none d-lg-inline text-white small">Animoneesan</span>
               </a>
               </div>
             </li>
@@ -785,7 +785,7 @@ button1:hover {
        </div>
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw: <a href="https://github.com/Iqbalz"
+              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw: <a href="https://github.com/jauhari21"
                   class="btn btn-primary btn-sm" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;GitHub</a></p>
             </div>
           </div>
@@ -801,7 +801,7 @@ button1:hover {
                 <hr>
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">Iqbalz</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">Animoneesan</div>
                       <div class="mt-2 mb-0 text-muted text-xs">
                         <span>I`m Newbie</span>
                       </div>
@@ -809,9 +809,9 @@ button1:hover {
                     <div class="dropdown">
                         <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuOutlineButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Contact </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuOutlineButton1">
-                          <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+6281315995628&text=Assalamualaikum">WhatsApp</a>
+                          <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+6283877698966&text=Assalamualaikum">WhatsApp</a>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="https://www.instagram.com/Iqbalz">Instagram</a>
+                          <a class="dropdown-item" href="https://www.instagram.com/kalimat2anime">Instagram</a>
                         </div>
                       </div>
                   </div>
@@ -842,8 +842,8 @@ button1:hover {
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; 2021 - Developed By
-              <b><a href="https://www.instagram.com/Iqbalz" target="_blank">Iqbalz</a></b>
+            <span>Copyright &copy; 2021 - Developed By Jauhari
+              <b><a href="https://www.instagram.com/kalimat2anime" target="_blank">Jauhari</a></b>
             </span>
           </div>
         </div>
@@ -966,11 +966,11 @@ const check_match = () => {
 const check_for_winner = () => {
   let res = check_match()
   if (res == player) {
-    winner.innerText = "Kamu Menang Apikey Nya : Iqbalz";
+    winner.innerText = "Kamu Menang Apikey Nya : Animo";
     winner.classList.add("playerWin");
     board_full = true
   } else if (res == computer) {
-    winner.innerText = "Awokawok Kalah Sama Komputer:v";
+    winner.innerText = "Awokawok Kalah kok Sama Komputer:v";
     winner.classList.add("computerWin");
     board_full = true
   } else if (board_full) {
@@ -1029,7 +1029,7 @@ render_board();
 </script>
   
   <script type="text/javascript">
-	$.getJSON("https://api.countapi.xyz/hit/iqbalzz.herokuapp/visits", function(data) {
+	$.getJSON("https://api.countapi.xyz/hit/animoneesan.herokuapp/visits", function(data) {
     	$("#visitorJarAPI").text(data.value);
 	});
 </script>
@@ -1038,12 +1038,12 @@ render_board();
 document.getElementById("userhit").textContent=data.userhit};xhr.open("GET",url,true);xhr.send();}
 </script>
 <script>
-alert('Iqbalz Rest Api')
+alert('Animoneesan Rest Api')
 </script>
 	<script>
   swal("Halo Stah", "Jangan Bully Aku:(", "warning");
 </script>
-    <audio autoplay="true" src="https://j.top4top.io/m_20198f3xg1.mp3"></audio>
+    <audio autoplay="true" src="https://b.top4top.io/m_20374xjsw0.mp3"></audio>
         
 </body>
 
