--- a/views/docs.html
+++ b/views/docs.html
@@ -801,9 +801,9 @@ button1:hover {
                 <hr>
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">Animoneesan</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">Jauhari</div>
                       <div class="mt-2 mb-0 text-muted text-xs">
-                        <span>I`m Newbie</span>
+                        <span>I`m Tamvan</span>
                       </div>
                     </div>
                     <div class="dropdown">
