--- a/views/docs.html
+++ b/views/docs.html
@@ -624,7 +624,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">April 30, 2021</div>
+                    <div class="small text-gray-500">Juli 30, 2021</div>
                     <span class="font-weight-bold">Update Tampilan</span>
                   </div>
                 </a>
@@ -635,8 +635,8 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">March 16, 2021</div>
-                    <span class="font-weight-bold">Need apikey? Mainin tic tac toe:v</span>
+                    <div class="small text-gray-500">Juli 30, 2021</div>
+                    <span class="font-weight-bold">Butuh apikey? Mainin tic tac toe:v</span>
                   </div>
                  </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -646,7 +646,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">May 12, 2021</div>
+                    <div class="small text-gray-500">Juli 30, 2021</div>
                     <span class="font-weight-bold">Belum selesai sepenuhnya :v</span>
                   </div>
                 </a>
@@ -842,7 +842,7 @@ button1:hover {
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; 2021 - Developed By Jauhari
+            <span>Copyright &copy; 2021 - Developed By
               <b><a href="https://www.instagram.com/kalimat2anime" target="_blank">Jauhari</a></b>
             </span>
           </div>
