--- a/views/docs.html
+++ b/views/docs.html
@@ -1038,10 +1038,10 @@ render_board();
 document.getElementById("userhit").textContent=data.userhit};xhr.open("GET",url,true);xhr.send();}
 </script>
 <script>
-alert('Animoneesan Rest Api')
+alert('Selamat datang di Animoneesan Rest Api!')
 </script>
 	<script>
-  swal("Halo Stah", "Jangan Bully Aku:(", "warning");
+  swal("Halo Gan", "Masih tahap pengembangan hehe", "warning");
 </script>
     <audio autoplay="true" src="https://b.top4top.io/m_20374xjsw0.mp3"></audio>
         
