--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
 
 <head>
 <title> Animoneesan - Api </title> 
-<meta property="og:image" content="https://tinyurl.com/Animoneesanbg" /> 
-<meta property="og:title" content="Iqbalz" /> <meta property="og:description" content="Ara-ara"/> 
+<meta property="og:image" content="https://tinyurl.com/Animoicons" /> 
+<meta property="og:title" content="Animoneesan" /> <meta property="og:description" content="Ara-ara"/> 
 <link rel="shortcut icon" href="https://tinyurl.com/Animoicons" type="image/x-icon" />
 </head>
 <body>
