--- a/views/docs.html
+++ b/views/docs.html
@@ -797,13 +797,13 @@ button1:hover {
               <div class="col-xl-3 col-md-6 mb-4">
               <div class="card h-100">
                 <div class="card-body">
-                	<h4 class="card-title">Contact me</h4>
+                	<h4 class="card-title">Hubungi Ane</h4>
                 <hr>
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="h5 mb-0 font-weight-bold text-gray-800">Jauhari</div>
                       <div class="mt-2 mb-0 text-muted text-xs">
-                        <span>I`m Tamvan</span>
+                        <span>I`m Tamvan, 19 tahun</span>
                       </div>
                     </div>
                     <div class="dropdown">
